--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,14 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "style-loader": "^2.0.0",
+    "web-vitals": "^0.2.4",
+    "webpack": "^5.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
